# recruit-coding

./: README.md
dev/❎ 消除 Switch/: main.py  op.py
dev/🐍 怕蛇的人如何学 Python？/: speeding.py
dev/💎 软件的永恒之道（二）/: counter.py
dev/💠 软件的永恒之道（一）/: vigenere.py
dev/🔀 Trace it！/: trace.py
dev/🧮 Primes/: forker.py
sa/⭕ 当一条合格的音游狗！/: README.md  config.toml  daemon.conf  note.md  pyproject.toml  requirements.txt
sa/⭕ 当一条合格的音游狗！/watchman/: __main__.py  config.py  log.py  report.py
sa/⭕ 当一条合格的音游狗！/watchman/quotas/: cpu.py  disk.py  mem.py
