[tool.poetry]
name = "watchman"
version = "0.1.0"
description = ""
authors = ["syrinka <syrinka@foxmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
psutil = "^5.9.1"
toml = "^0.10.2"
loguru = "^0.6.0"
schedule = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
